<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailSurat">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/ivBatik"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/batik" />

                <TextView
                    android:id="@+id/turunnya"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_toStartOf="@+id/pengertian"
                    android:background="@drawable/detail"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/jenis"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/pengertian"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/detail"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/pengertian" />

                <TextView
                    android:id="@+id/jumlahayat"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_toEndOf="@+id/pengertian"
                    android:background="@drawable/detail"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:text="@string/jumlahayat" />

                <TextView
                    android:id="@+id/basmalah"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_below="@+id/pengertian"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/detail"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/basmalah"
                    android:textSize="45sp" />

            </RelativeLayout>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMainayat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                tools:listitem="@layout/list_ayat">

            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>